--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,4 @@
-
+server.port=8080
+spring.datasource.url=jdbc:mysql://localhost:3306/e-commerce
+spring.datasource.username=root
+spring.datasource.password=12345678
