--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,3 +2,5 @@ server.port=8080
 spring.datasource.url=jdbc:mysql://localhost:3306/e-commerce
 spring.datasource.username=root
 spring.datasource.password=12345678
+spring.jpa.hibernate.ddl-auto=create-drop
+
