--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,9 @@
 server.port=8080
-spring.datasource.url=jdbc:mysql://localhost:3306/e-commerce
+spring.datasource.url=jdbc:mysql://localhost:3306/e-commerce?createDatabaseIfNotExist=true
 spring.datasource.username=root
 spring.datasource.password=12345678
-spring.jpa.hibernate.ddl-auto=create-drop
+spring.jpa.hibernate.ddl-auto=create
+spring.jpa.generate-ddl=true
 spring.jpa.defer-datasource-initialization=true
 spring.sql.init.mode=always
 
