--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,5 +6,7 @@ spring.jpa.hibernate.ddl-auto=create
 spring.jpa.generate-ddl=true
 spring.jpa.defer-datasource-initialization=true
 spring.sql.init.mode=always
+spring.mvc.contentnegotiation.media-types.json=application/json;charset=UTF-8
+
 
 
